Project

General

Profile

Actions

Bug #10858

closed

File.expand_path on Windows does not handle drive-current path if 2nd arg is relative

Bug #10858: File.expand_path on Windows does not handle drive-current path if 2nd arg is relative

Added by djberg96 (Daniel Berger) over 11 years ago. Updated over 11 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.2.0p43 (2015-02-06 revision 49530) [i386-mswin32_120]
[ruby-core:68130]

Description

On Windows, if the first argument to File.expand_path is a drive-current path, and the dir argument is relative, you get a bogus result:

irb(main):001:0> File.expand_path("c:foo", "bar")
=> "C:/Users/djberge/Repositories/bar/c:foo"

Compare that with Ruby 1.8:

irb(main):002:0> RUBY_VERSION
=> "1.8.7"
irb(main):003:0> File.expand_path('c:foo', "bar")
=> "C:/Users/djberge/Repositories/bar/foo"
Actions

Also available in: PDF Atom